--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -1,4 +1,37 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: postgres-init-sql
+data:
+  init.sql: |
+    -- SYS_MLANG 테이블 생성
+    CREATE TABLE IF NOT EXISTS public.sys_mlang (
+      mlang_tp_cd varchar(20) NOT NULL,
+      mlang_cd varchar(100) NOT NULL,
+      lang_cd varchar(20) NOT NULL,
+      mlang_txt varchar(1000) NULL,
+      usg_yn varchar(1) DEFAULT 'Y'::character varying NOT NULL,
+      del_yn varchar(1) DEFAULT 'N'::character varying NOT NULL,
+      crt_user_id varchar(12) NOT NULL,
+      crt_date timestamp DEFAULT CURRENT_TIMESTAMP NOT NULL,
+      upt_user_id varchar(12) NOT NULL,
+      upt_date timestamp DEFAULT CURRENT_TIMESTAMP NOT NULL,
+      PRIMARY KEY (mlang_tp_cd, mlang_cd, lang_cd)
+    );
+
+    COMMENT ON COLUMN public.sys_mlang.mlang_tp_cd IS '다국어 구분 코드';
+    COMMENT ON COLUMN public.sys_mlang.mlang_cd IS '다국어 코드';
+    COMMENT ON COLUMN public.sys_mlang.lang_cd IS '언어 코드';
+    COMMENT ON COLUMN public.sys_mlang.mlang_txt IS '다국어 내용';
+    COMMENT ON COLUMN public.sys_mlang.usg_yn IS '사용 여부';
+    COMMENT ON COLUMN public.sys_mlang.del_yn IS '삭제 여부';
+    COMMENT ON COLUMN public.sys_mlang.crt_user_id IS '등록자';
+    COMMENT ON COLUMN public.sys_mlang.crt_date IS '등록일';
+    COMMENT ON COLUMN public.sys_mlang.upt_user_id IS '수정자';
+    COMMENT ON COLUMN public.sys_mlang.upt_date IS '수정일';
+
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pvc
@@ -42,6 +75,8 @@ spec:
         volumeMounts:
         - name: postgres-storage
           mountPath: /var/lib/postgresql/data
+        - name: init-sql
+          mountPath: /docker-entrypoint-initdb.d
         resources:
           requests:
             memory: "256Mi"
@@ -69,6 +104,9 @@ spec:
       - name: postgres-storage
         persistentVolumeClaim:
           claimName: postgres-pvc
+      - name: init-sql
+        configMap:
+          name: postgres-init-sql
 
 ---
 apiVersion: v1
