--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -84,6 +84,26 @@ logging:
     jdbc.sqltiming: WARN
     com.sysconf.interceptor: INFO
 
+# Actuator 및 Prometheus 설정
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus,metrics
+      base-path: /actuator
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    tags:
+      application: ${spring.application.name}
+      environment: ${spring.profiles.active:docker}
+  endpoint:
+    prometheus:
+      enabled: true
+    health:
+      show-details: always
+
 smw:
   service-domain: localhost, localhost:3000
   globalDblinkNm: SMW_DBLINK
