--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -84,23 +84,14 @@ logging:
     jdbc.sqltiming: WARN
     com.sysconf.interceptor: INFO
 
-# Actuator 및 Prometheus 설정
+# Actuator 설정 (Health Check용만)
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,prometheus,metrics
+        include: health,info
       base-path: /actuator
-  metrics:
-    export:
-      prometheus:
-        enabled: true
-    tags:
-      application: ${spring.application.name}
-      environment: ${spring.profiles.active:docker}
   endpoint:
-    prometheus:
-      enabled: true
     health:
       show-details: always
 
