--- a/k8s/secret.yaml.example
+++ b/k8s/secret.yaml.example
@@ -2,15 +2,22 @@
 # EC2에서 다음 명령어로 Secret을 생성하세요:
 #
 # kubectl create secret generic smw-db-secret \
-#   --from-literal=url='jdbc:log4jdbc:postgresql://pg1101.gabiadb.com:5432/jgh9514' \
-#   --from-literal=username='jgh9514' \
-#   --from-literal=password='jgh1596123' \
+#   --from-literal=url='jdbc:log4jdbc:postgresql://YOUR_DB_HOST:YOUR_DB_PORT/YOUR_DB_NAME' \
+#   --from-literal=username='YOUR_DB_USERNAME' \
+#   --from-literal=password='YOUR_DB_PASSWORD' \
 #   --dry-run=client -o yaml > k8s/secret.yaml
 #
 # 또는 base64로 인코딩하여 직접 생성:
-# echo -n 'jdbc:log4jdbc:postgresql://pg1101.gabiadb.com:5432/jgh9514' | base64
-# echo -n 'jgh9514' | base64
-# echo -n 'jgh1596123' | base64
+# echo -n 'jdbc:log4jdbc:postgresql://YOUR_DB_HOST:YOUR_DB_PORT/YOUR_DB_NAME' | base64
+# echo -n 'YOUR_DB_USERNAME' | base64
+# echo -n 'YOUR_DB_PASSWORD' | base64
+#
+# 실제 값은 다음을 참고하세요:
+# - YOUR_DB_HOST: 데이터베이스 호스트 주소
+# - YOUR_DB_PORT: 데이터베이스 포트 번호
+# - YOUR_DB_NAME: 데이터베이스 이름
+# - YOUR_DB_USERNAME: 데이터베이스 사용자명
+# - YOUR_DB_PASSWORD: 데이터베이스 비밀번호
 
 apiVersion: v1
 kind: Secret
