--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
       - master
+    paths-ignore:
+      - '**.md'
+      - '.gitignore'
+      - 'README.md'
+      - 'docs/**'
   workflow_dispatch:  # 수동 실행도 가능하도록
 
 env:
@@ -33,7 +38,7 @@ jobs:
         restore-keys: ${{ runner.os }}-m2
 
     - name: Build with Maven
-      run: mvn clean package -DskipTests
+      run: mvn clean package -DskipTests -T 1C  # 단일 스레드로 빌드하여 리소스 사용량 감소
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -59,12 +64,15 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64  # EC2는 amd64만 사용하므로 단일 플랫폼으로 변경 (빌드 시간 및 리소스 절약)
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=registry,ref=${{ env.DOCKER_IMAGE }}:latest
         cache-to: type=inline
+        # 빌드 최적화 옵션
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1
 
   deploy-to-k8s:
     needs: build-and-push
