--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -49,6 +49,8 @@ spec:
             secretKeyRef:
               name: smw-db-secret
               key: password
+        # AWS 자격 증명은 IAM 역할을 통해 자동으로 제공되므로 환경 변수 설정 불필요
+        # AWS SDK가 EC2 인스턴스에 부여된 IAM 역할을 자동으로 감지합니다.
         resources:
           requests:
             memory: "512Mi"
