--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -118,3 +118,15 @@ smw:
     max-requests: 1000  # Rate Limit 완화 (1분당 최대 1000회)
     window-seconds: 60
 
+# AWS S3 설정
+# IAM 역할을 사용하므로 Access Key와 Secret Key를 설정하지 않습니다.
+# AWS SDK가 자동으로 EC2 인스턴스에 부여된 IAM 역할을 감지합니다.
+cloud:
+  aws:
+    s3:
+      bucket: summonerswar-community
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false # 중요: K8s 환경에서 불필요한 스택 감지 방지
+
