--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -131,9 +131,13 @@ smw:
     window-seconds: 60 # 시간 윈도우 (초)
 
 # AWS S3 설정
-# 쿠버네티스 환경에서는 환경 변수(AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY, AWS_REGION)를 사용합니다.
-# 로컬 개발 환경에서도 환경 변수 사용을 권장합니다 (보안상 이유).
-# application.yml에 직접 설정하려면 아래 주석을 해제하세요:
-# AWS_ACCESS_KEY_ID: your-access-key-id
-# AWS_SECRET_ACCESS_KEY: your-secret-access-key
-# AWS_REGION: ap-northeast-2
+# IAM 역할을 사용하므로 Access Key와 Secret Key를 설정하지 않습니다.
+# AWS SDK가 자동으로 EC2 인스턴스에 부여된 IAM 역할을 감지합니다.
+cloud:
+  aws:
+    s3:
+      bucket: summonerswar-community
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false # 중요: K8s 환경에서 불필요한 스택 감지 방지
