--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -64,7 +64,7 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        platforms: linux/amd64  # EC2는 amd64만 사용하므로 단일 플랫폼으로 변경 (빌드 시간 및 리소스 절약)
+        platforms: linux/arm64  # EC2 인스턴스가 ARM64 아키텍처를 사용하므로 ARM64로 빌드
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
@@ -78,6 +78,9 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    
+    env:
+      IMAGE_TAG: main-${{ github.sha }}
     
     steps:
     - name: Checkout code
@@ -237,11 +240,17 @@ jobs:
             exit 1
           }
           
-          # 최신 이미지로 업데이트
+          # 최신 이미지로 업데이트 (SHA 기반 태그 사용)
           echo "=== 이미지 태그 업데이트 ==="
           if [ -f k8s/deployment.yaml ]; then
-            sed -i 's|image: gilhwanjeon/smw-app:.*|image: gilhwanjeon/smw-app:latest|g' k8s/deployment.yaml
-            echo "이미지 태그 업데이트 완료"
+            # SHA 기반 태그 사용 (이미지 변경 감지 명확화)
+            # 형식: main-{sha} (예: main-abc1234)
+            # GitHub Actions 환경 변수에서 전달받음
+            IMAGE_TAG="${IMAGE_TAG:-latest}"
+            sed -i "s|image: gilhwanjeon/smw-app:.*|image: gilhwanjeon/smw-app:${IMAGE_TAG}|g" k8s/deployment.yaml
+            echo "이미지 태그 업데이트 완료: ${IMAGE_TAG}"
+            # 업데이트된 내용 확인
+            grep "image:" k8s/deployment.yaml || echo "이미지 태그 확인 실패"
           else
             echo "WARNING: k8s/deployment.yaml 파일을 찾을 수 없음"
           fi
@@ -262,11 +271,16 @@ jobs:
             exit 1
           fi
           
-          # Pod 재시작 (배포가 이미 존재하는 경우)
-          echo "=== Pod 재시작 ==="
-          kubectl rollout restart deployment/smw-app --request-timeout=60s 2>/dev/null || \
-          kubectl delete pod -l app=smw-app --request-timeout=60s 2>/dev/null || \
-          echo "Pod 재시작 스킵 (새 배포일 수 있음)"
+          # Pod 재시작 (latest 태그 사용 시 반드시 필요 - Kubernetes가 이미지 변경을 감지하지 못함)
+          echo "=== Pod 재시작 (최신 이미지 적용) ==="
+          echo "⚠️  중요: latest 태그 사용 시 Kubernetes가 이미지 변경을 감지하지 못하므로"
+          echo "   kubectl rollout restart를 실행하여 강제로 Pod를 재시작합니다."
+          kubectl rollout restart deployment/smw-app --request-timeout=60s || {
+            echo "WARNING: rollout restart 실패, Pod 직접 삭제 시도"
+            kubectl delete pod -l app=smw-app --request-timeout=60s || {
+              echo "WARNING: Pod 삭제 실패, 새 배포일 수 있음"
+            }
+          }
           
           # 배포 상태 확인
           echo "=== 배포 상태 확인 ==="
@@ -277,21 +291,40 @@ jobs:
             echo "WARNING: Service 상태 확인 실패"
           }
           
-          # 배포 완료 대기 (최소 대기)
-          echo "=== 배포 완료 대기 (5초) ==="
-          sleep 5
+          # 배포 완료 대기 (롤아웃 상태 확인)
+          echo "=== 배포 완료 대기 (최대 5분) ==="
+          kubectl rollout status deployment/smw-app --timeout=5m || {
+            echo "WARNING: 배포 완료 대기 시간 초과"
+            echo "현재 Pod 상태:"
+            kubectl get pods -l app=smw-app --request-timeout=30s || echo "Pod 상태 확인 실패"
+          }
           
           # 최종 상태 확인
           echo "=== 최종 배포 상태 ==="
-          kubectl get pods -l app=smw-app --request-timeout=30s || echo "Pod 상태 확인 실패 (무시)"
+          kubectl get pods -l app=smw-app -o wide --request-timeout=30s || echo "Pod 상태 확인 실패 (무시)"
           
-          # Pod 로그 확인 (최근 5줄만, 빠르게)
-          echo "=== Pod 로그 확인 (최근 5줄) ==="
+          # Pod 상태 상세 확인
+          echo "=== Pod 상세 상태 ==="
           POD_NAME=$(kubectl get pods -l app=smw-app -o jsonpath='{.items[0].metadata.name}' --request-timeout=15s 2>/dev/null || echo "")
           if [ -n "$POD_NAME" ] && [ "$POD_NAME" != "null" ]; then
-            kubectl logs --tail=5 $POD_NAME --request-timeout=15s 2>/dev/null || echo "로그 확인 실패 (무시)"
+            echo "Pod 이름: $POD_NAME"
+            kubectl describe pod $POD_NAME --request-timeout=30s 2>/dev/null | grep -A 10 "Status\|State\|Ready\|Image" || echo "Pod 상세 정보 확인 실패"
+            
+            # Pod 로그 확인 (최근 10줄)
+            echo "=== Pod 로그 확인 (최근 10줄) ==="
+            kubectl logs --tail=10 $POD_NAME --request-timeout=15s 2>/dev/null || echo "로그 확인 실패 (무시)"
           else
             echo "Pod를 찾을 수 없습니다. (무시)"
+          fi
+          
+          # 배포 성공 여부 확인
+          echo "=== 배포 성공 여부 확인 ==="
+          READY_PODS=$(kubectl get pods -l app=smw-app -o jsonpath='{.items[?(@.status.phase=="Running")].metadata.name}' --request-timeout=15s 2>/dev/null | wc -w)
+          if [ "$READY_PODS" -gt 0 ]; then
+            echo "✅ 배포 성공: $READY_PODS 개의 Pod가 Running 상태입니다."
+          else
+            echo "❌ 배포 실패: Running 상태인 Pod가 없습니다."
+            exit 1
           fi
           
           echo "=== 배포 작업 완료 ==="
