--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -29,8 +29,9 @@ spec:
         env:
         # AWS SDK가 EC2 인스턴스 메타데이터 서비스를 사용하도록 명시적으로 설정
         # K3s 환경에서 Pod가 EC2 인스턴스의 IAM 역할을 사용할 수 있도록 설정
+        # S3 버킷이 시드니 리전에 있으므로 일치시킴
         - name: AWS_REGION
-          value: "ap-northeast-2"
+          value: "ap-southeast-2"
         - name: SPRING_PROFILES_ACTIVE
           value: "docker"
         - name: SPRING_DATASOURCE_URL
